--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 	<i class="far fa-bells"></i>
 	<i class="fas fa-bells"></i>
 	<i class="fas fa-bells"></i>
+	<i class="fa-thin fa-bowl-hot"></i>
+	<i class="fa-regular fa-bird"></i>
 </body>
 </html>
