Update full v6.1.1 pro

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 	<i class="fas fa-bells"></i>
 	<i class="fa-thin fa-bowl-hot"></i>
 	<i class="fa-regular fa-bird"></i>
+	<i class="fa-regular fa-dragon"></i>
 </body>
 </html>
